bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:9: error: ')' expected but '}' found.
}
^